apps/speedtest/speedtest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: speedtest
spec:
  selector:
    app: speedtest
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
